--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,10 @@
 
 body {
     height: 100vh;
-    background-color: blue;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/hogsmede.jpg);
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
 }
 
 button {
