--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,10 @@ button {
     padding: 0.7em 1.8em;
 }
 
+#time-turner {
+    width: 30px;
+}
+
 #next-question-button {
     font-size: 1em;
     margin-top: 1em;
