--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,3 +210,78 @@ footer {
     }
 
   }
+  
+  .glow-effect {
+    --glow-line-color: #fff;
+    --glow-line-thickness: 2px;
+    --glow-line-length: 20px;
+    --glow-blur-color: #fff;
+    --glow-blur-size: 5px;
+    --glow-offset: 0px;
+    --animation-speed: 1200ms;
+    --container-offset: 100px;
+    position: relative;
+  }
+  
+  .glow-container {
+    pointer-events: none;
+    position: absolute;
+    inset: calc(var(--container-offset) / -20);
+    width: calc(100% + var(--container-offset));
+    height: calc(100% + var(--container-offset));
+    opacity: 0;
+  }
+  
+  .glow-blur,
+  .glow-line {
+    position: relative;
+    width: calc(100% - var(--container-offset) + var(--glow-offset));
+    height: calc(100% - var(--container-offset) + var(--glow-offset));
+    fill: transparent;
+    stroke: black;
+    stroke-width: 5px;
+    stroke-dasharray: var(--glow-line-length) calc(50px - var(--glow-line-length));
+  }
+  
+  .glow-effect:is(:hover, :focus) :is(.glow-line, .glow-blur) {
+    stroke-dashoffset: -80px;
+    transition: stroke-dashoffset var(--animation-speed) ease-in;
+  }
+  
+  .glow-line {
+    stroke: var(--glow-line-color);
+    stroke-width: var(--glow-line-thickness);
+  }
+  
+  .glow-blur {
+    filter: blur(var(--glow-blur-size));
+    stroke: var(--glow-blur-color);
+    stroke-width: var(--glow-blur-size);
+  }
+  
+  .glow-effect:is(:hover, :focus) .glow-container {
+    animation: glow-visibility ease-in-out var(--animation-speed);
+  }
+  
+  @keyframes glow-visibility {
+    0%,
+    100% {
+      opacity: 0;
+    }
+    25%,
+    75% {
+      opacity: 1;
+    }
+  }
+  
+  .glow-effect[data-glow-animation="false"] {
+    --glow-line-length: 50px;
+  }
+  .glow-effect[data-glow-offset="true"] {
+    --glow-offset: 10px;
+  }
+  
+  .glow-effect[data-glow-animation="grow"]:is(:hover, :focus) .glow-container {
+    scale: 1.3;
+    transition: scale var(--animation-speed) linear;
+  }
